Made screens better on desktop

--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -1,20 +1,27 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" id="header" style="background-color: black;">
-	<div class="navbar-header" style="width: 100%">
-		<span class="glyphicon glyphicon-chevron-left" id="navbar_back" style="margin-top: 16px; margin-left: 1px; float: left; color: white; visibility: visible;">
-		</span>
-		<a class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
-			<img id="brand_logo" src="img/black_logo_40.png" style="padding-top: 5px; display: none;">
-		</a>
-  		<a class="navbar-brand" style="padding-left: 5px;">
-			<span id="navbar_title"></span>
-		</a>
-		<div style="float: right;">
-	  	  	<div id="navbar_slidemenu_button" class="menuitem" style="background: url(img/menu.png) no-repeat 0; width: 40px; margin-top: 8px; height: 35px;">
-	    		&nbsp;
-	  		</div>
-	  	</div>
-   		<div id="navbar_buttons">
+	<div class="container">
+		<div class="navbar-header" style="width: 100%">
+			<span class="glyphicon glyphicon-chevron-left" id="navbar_back" style="margin-top: 16px; margin-left: 1px; float: left; color: white; visibility: visible;">
+			</span>
+			<a class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
+				<img id="brand_logo" src="img/black_logo_40.png" style="padding-top: 5px; display: none;">
+			</a>
+	  		<a class="navbar-brand">
+				<span id="navbar_title" style="padding-left: 3px;"></span>
+			</a>
+			<div style="float: right;">
+		  	  	<div id="navbar_slidemenu_button" class="menuitem" style="background: url(img/menu.png) no-repeat 0; width: 40px; margin-top: 8px; height: 35px;">
+		    		&nbsp;
+		  		</div>
+		  	</div>
+	   		<div id="navbar_buttons">
+			</div>
 		</div>
 	</div>
 </nav>
-<div class="appview_content"></div>
+<div class="container">
+	<div class="row">
+		<div id="appview_content" class="col-md-12">
+		</div>
+	</div>
+</div>
