--- a/app/templates/pages/LoginPage.hbs
+++ b/app/templates/pages/LoginPage.hbs
@@ -4,10 +4,10 @@
     <span class="glyphicon glyphicon-arrow-left"></span> Try out app
   <div>
   <br>
-  <h4>Login to mWater</h4>
+  <h3>Login to mWater</h3>
   <form id="form_login">
     <div class="form-group">
-        <label for="login_username">Username or email</label>
+        <label for="login_username">Username or Email</label>
         <input class="form-control" id="login_username" type="text" autocapitalize="off" autocorrect="off" spellcheck="false" placeholder="Username" />
     </div>
     <div class="form-group">
