--- a/app/templates/pages/SignupPage.hbs
+++ b/app/templates/pages/SignupPage.hbs
@@ -1,9 +1,10 @@
 <div class="page">
-  <h4>Signup with mWater</h4>
+  <h3>Signup with mWater</h3>
   <form id="form_signup">
     <div class="form-group">
         <label for="signup_username">Username</label>
         <input class="form-control" id="signup_username" type="text" autocapitalize="off" autocorrect="off" spellcheck="false" placeholder="Username" />
+        <span class="help-block">Note: Your username is visible on water sources you create</span>
     </div>
     <div class="form-group">
         <label for="signup_password">Password</label>
