--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -1,7 +1,15 @@
+<style>
+.container-nopadding {
+	padding-left: 0;
+	padding-right: 0;
+}
+</style>
+
 <nav class="navbar navbar-inverse navbar-fixed-top" id="header" style="background-color: black;">
-	<div class="container">
+	<div class="container container-nopadding">
 		<div class="navbar-header" style="width: 100%">
-			<span class="glyphicon glyphicon-chevron-left" id="navbar_back" style="margin-top: 16px; margin-left: 1px; float: left; color: white; visibility: visible;">
+			<span class="glyphicon glyphicon-chevron-left" id="navbar_back" 
+				style="margin-top: 16px; margin-left: 16px; margin-right: -15px; float: left; color: white; visibility: visible;">
 			</span>
 			<a class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
 				<img id="brand_logo" src="img/black_logo_40.png" style="padding-top: 5px; display: none;">
@@ -19,7 +27,7 @@
 		</div>
 	</div>
 </nav>
-<div class="container">
+<div class="container container-nopadding">
 	<div class="row">
 		<div id="appview_content" class="col-md-12">
 		</div>
