--- a/app/templates/pages/ExistingSurveyPage.hbs
+++ b/app/templates/pages/ExistingSurveyPage.hbs
@@ -8,9 +8,9 @@
 
 <div>
   <h4>Incomplete Surveys</h4>
-  <table class="table table-bordered" id="incomplete_table">
+  <table class="table" id="incomplete_table">
   </table>
   <h4>Recent Completed Surveys</h4>
-  <table class="table table-bordered" id="recent_table">
+  <table class="table" id="recent_table">
   </table>
 </div>
