--- a/app/templates/pages/TestListPage.hbs
+++ b/app/templates/pages/TestListPage.hbs
@@ -1,8 +1,8 @@
 <div>
   <h4>Incomplete Tests</h4>
-  <table class="table table-bordered" id="incomplete_table">
+  <table class="table" id="incomplete_table">
   </table>
   <h4>Recent Tests</h4>
-  <table class="table table-bordered" id="recent_table">
+  <table class="table" id="recent_table">
   </table>
 </div>
