--- a/app/templates/ButtonBar.hbs
+++ b/app/templates/ButtonBar.hbs
@@ -5,12 +5,12 @@
 }
 </style>
 {{#each items}}
-<div style="float:right;">
+<div style="float:right; position:relative;">
   {{#if menu}}
   <div data-toggle="dropdown" style="background: url(img/{{icon}}) no-repeat 0; width: 40px; margin-top: 8px; height: 35px;">
     {{#if text}}{{text}}{{else}}&nbsp;{{/if}}
   </div>
-  <ul class="dropdown-menu" role="menu" style="float: right; right: 0; left: auto;">
+  <ul class="dropdown-menu" role="menu" style="right: 0; left: auto;">
       {{#each menu}}
       <li><a id="{{id}}" class="menuitem">{{text}}</a></li>
       {{/each}}
