Fixed margins for bootstrap

--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -15,7 +15,7 @@
 				<img id="brand_logo" src="img/black_logo_40.png" style="padding-top: 5px; display: none;">
 			</a>
 	  		<a class="navbar-brand">
-				<span id="navbar_title" style="padding-left: 18px;"></span>
+				<span id="navbar_title" style="padding-left: 3px;"></span>
 			</a>
 			<div style="float: right;">
 		  	  	<div id="navbar_slidemenu_button" class="menuitem" style="background: url(img/menu.png) no-repeat 0; width: 40px; margin-top: 8px; height: 35px;">
@@ -27,9 +27,9 @@
 		</div>
 	</div>
 </nav>
-<div class="container container-nopadding">
-	<div class="row">
-		<div id="appview_content" class="col-md-12">
+<div class="container" style="padding-left: 0px; padding-right: 0px;">
+	<div class="row" style="margin-left: 0px; margin-right: 0px;">
+		<div id="appview_content" class="col-md-12" style="padding-left: 0px; padding-right: 0px;">
 		</div>
 	</div>
 </div>
