--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -9,7 +9,7 @@
 	<div class="container container-nopadding">
 		<div class="navbar-header" style="width: 100%; margin-left: 0px; margin-right: 0px;">
 			<span class="glyphicon glyphicon-chevron-left" id="navbar_back" 
-				style="margin-top: 16px; margin-left: 1px; margin-right: -15px; float: left; color: white; visibility: visible;">
+				style="margin-top: 16px; margin-left: 1px; float: left; color: white; visibility: visible;">
 			</span>
 			<a class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
 				<img id="brand_logo" src="img/black_logo_40.png" style="padding-top: 5px; display: none;">
