--- a/app/templates/forms/ImageQuestion.hbs
+++ b/app/templates/forms/ImageQuestion.hbs
@@ -6,7 +6,7 @@
 {{/if}}
 
 {{#if noImage}}
-<div class="muted">No images present</div>
+<div class="text-muted">No images present</div>
 {{/if}}
 
 {{#if notSupported}}
