--- a/app/templates/forms/ImagesQuestion.hbs
+++ b/app/templates/forms/ImagesQuestion.hbs
@@ -7,7 +7,7 @@
 
 
 {{#if noImage}}
-<div class="muted">No images present</div>
+<div class="text-muted">No images present</div>
 {{/if}}
 
 {{#if notSupported}}
