--- a/app/templates/pages/ExistingSurveyPage_items.hbs
+++ b/app/templates/pages/ExistingSurveyPage_items.hbs
@@ -5,7 +5,7 @@
 			<span id="name_{{_id}}"></span> (started {{formatDate started "%F"}})
 			{{#if completed}}<span class="label label-success">Completed</span>{{else}}<span class="label label-warning">Draft</span>{{/if}}
 			<br/>
-			<span class="muted">{{code}}</span>
+			<span class="text-muted">{{code}}</span>
 		</td>
 		<td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
 	</tr>
