--- a/app/templates/pages/NewTestPage.hbs
+++ b/app/templates/pages/NewTestPage.hbs
@@ -13,7 +13,7 @@
     <tr class="test tappable" id="{{code}}">
       <td><strong>{{name}}</strong> 
       <br/>
-      <span class="muted">{{desc}}&nbsp;</span></td>
+      <span class="text-muted">{{desc}}&nbsp;</span></td>
       <td style="vertical-align:middle; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
     </tr>
     {{/each}}
