--- a/app/templates/pages/SourceListPage_items.hbs
+++ b/app/templates/pages/SourceListPage_items.hbs
@@ -4,7 +4,7 @@
 	    <td><strong>{{name}}</strong> 
 	    <td>{{#if geo}}{{else}}<span class="text-error"><b>Unlocated</b></span>{{/if}}</td>
 	    <br/>
-	    <span class="muted">{{desc}}&nbsp;</span></td>
+	    <span class="text-muted">{{desc}}&nbsp;</span></td>
 	    <td><strong>{{code}}</strong></td>
 	    <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
 	</tr>
