--- a/app/templates/pages/SourcePage.hbs
+++ b/app/templates/pages/SourcePage.hbs
@@ -42,7 +42,7 @@
         <br/><br/>
         <div class="well well-small">
           {{#eachProperty source.custom}}
-            <div><span class="muted">{{key}}</span>: {{value}}</div>
+            <div><span class="text-muted">{{key}}</span>: {{value}}</div>
           {{/eachProperty}}
         </div>
         {{/if}}
