--- a/app/templates/pages/TestListPage_items.hbs
+++ b/app/templates/pages/TestListPage_items.hbs
@@ -4,7 +4,7 @@
 	  <td>
 	  	<strong><span id="name_{{_id}}"></span></strong>
 		<br/>
-		<span class="muted">{{code}}</span>
+		<span class="text-muted">{{code}}</span>
 	  </td>
 	  <td style="border-left:none;"><strong>{{#if data.source}}Source {{data.source}}{{/if}}</strong></td>
 	  <td style="border-left:none;">{{formatDate started "%F"}}</strong></td>
