--- a/app/templates/pages/TestPage.hbs
+++ b/app/templates/pages/TestPage.hbs
@@ -14,9 +14,9 @@
 </style>
 
 <div class="testcode_div">
-	<span class="muted"><b>Test </b></span>
+	<span class="text-muted"><b>Test </b></span>
 	<span class="testcode">{{#if test.code}}{{test.code}}{{else}}unnamed{{/if}}</span>
-	<span class="muted"><b> of </b></span><b>{{form.name}}</b>
+	<span class="text-muted"><b> of </b></span><b>{{form.name}}</b>
 </div>
 
 
