--- a/app/templates/pages/SurveyPage.hbs
+++ b/app/templates/pages/SurveyPage.hbs
@@ -14,11 +14,11 @@
 </style>
 
 <div class="responsecode_div">
-	<span class="muted"><b>Survey </b></span>
+	<span class="text-muted"><b>Survey </b></span>
 	{{#if response.code}}
 	<span class="responsecode">{{response.code}}</span>
 	{{/if}}
-	<span class="muted"><b> of </b></span><b>{{form.name}}</b>
+	<span class="text-muted"><b> of </b></span><b>{{form.name}}</b>
 </div>
 
 <div id="contents"></div>
