--- a/app/templates/AppView.hbs
+++ b/app/templates/AppView.hbs
@@ -14,7 +14,7 @@
 			<a class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
 				<img id="brand_logo" src="img/black_logo_40.png" style="padding-top: 5px; display: none;">
 			</a>
-	  		<a class="navbar-brand">
+	  		<a class="navbar-brand" style="margin-left: -15px">
 				<span id="navbar_title" style="padding-left: 3px;"></span>
 			</a>
 			<div style="float: right;">
