Improved logic of unit question

--- a/app/templates/forms/UnitQuestion.hbs
+++ b/app/templates/forms/UnitQuestion.hbs
@@ -1,19 +1,9 @@
 <div class="row">
-	{{#if prefix}}
-	<div class="col-xs-3">
-		<select id="unit" class="form-control">
-			<option value="">Select units</option>
-			{{#each units}}
-				<option value="{{first this}}">{{last this}}</option>
-			{{/each}}
-		</select>
-	</div>
-	{{/if}}
+	{{#if prefix}}{{else}}
 	<div class="col-xs-9">
 		<input id="value" class="form-control" type="number" step="any" />
 	</div>
-	{{#if prefix}}
-	{{else}}
+	{{/if}}
 	<div class="col-xs-3">
 		<select id="unit" class="form-control">
 			<option value="">Select units</option>
@@ -21,6 +11,10 @@
 				<option value="{{first this}}">{{last this}}</option>
 			{{/each}}
 		</select>
+	</div>
+	{{#if prefix}}
+	<div class="col-xs-9">
+		<input id="value" class="form-control" type="number" step="any" />
 	</div>
 	{{/if}}
 </div>
