--- a/app/templates/forms/Sections_breadcrumbs.hbs
+++ b/app/templates/forms/Sections_breadcrumbs.hbs
@@ -1,5 +1,4 @@
 {{#each sections}}
-<li><a class="section-crumb" data-value="{{@index}}">{{title}}</a> 
-<span class="divider">/</span></li>
+<li><a class="section-crumb" data-value="{{@index}}">{{title}}</a></li>
 {{/each}}
 <li class="active"><b>{{lastSection.title}}</b></li>
