Localize-readied files

--- a/app/templates/forms/UnitQuestion.hbs
+++ b/app/templates/forms/UnitQuestion.hbs
@@ -7,7 +7,7 @@
 	<div class="col-xs-6">
 		<select id="unit" class="form-control">
 			{{#if defaultUnit}}{{else}}
-			<option value="">Select units</option>
+			<option value="">{{T "Select units"}}</option>
 			{{/if}}
 			{{#each units}}
 				<option value="{{id}}">{{value}}</option>
