--- a/app/templates/images/ImageUploader.hbs
+++ b/app/templates/images/ImageUploader.hbs
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">Upload Image</h4>
+        <h4 class="modal-title">{{T "Upload Image"}}</h4>
       </div>
       <div class="modal-body">
         <form id="uploadForm" enctype="multipart/form-data" method="post">
@@ -12,11 +12,11 @@
             <div class="bar" style="width: 0%;"></div>
           </div>
         </form>
-        <button id="cancel" class="btn btn-default" disabled="disabled">Cancel</button>
+        <button id="cancel" class="btn btn-default" disabled="disabled">{{T "Cancel"}}</button>
       </div>
       <div class="modal-footer">
-        <button id="close" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</button>
-        <button id="upload" disabled="disabled" class="btn btn-primary">Upload</button>
+        <button id="close" class="btn btn-default" data-dismiss="modal" aria-hidden="true">{{T "Close"}}</button>
+        <button id="upload" disabled="disabled" class="btn btn-primary">{{T "Upload"}}</button>
       </div>
     </div>
   </div>
