--- a/app/templates/pages/AdminPage.hbs
+++ b/app/templates/pages/AdminPage.hbs
@@ -1,4 +1,4 @@
-<h5>Change user's password</h5>
+<h5>{{T "Change user's password"}}</h5>
 <div>
   <input class="form-control" id="password_username" type="text" autocapitalize="off" autocorrect="off" placeholder="Username" />
 </div>
@@ -6,11 +6,11 @@
   <input class="form-control" id="new_password" type="text" placeholder="Password" />
 </div>
 <div>
-  <button id="change_password_button" type="button" class="btn btn-default">Change Password</button>
+  <button id="change_password_button" type="button" class="btn btn-default">{{T "Change Password"}}</button>
 </div>
 <br/><br/>
 
-<h5>Set user's organization</h5>
+<h5>{{T "Set user's organization"}}</h5>
 <div>
   <input class="form-control" id="org_username" type="text" autocapitalize="off" autocorrect="off" placeholder="Username" />
 </div>
@@ -18,14 +18,14 @@
   <input class="form-control" id="new_org" type="text" autocapitalize="off" autocorrect="off" placeholder="Organization" />
 </div>
 <div>
-  <div id="update_row_orgs" class="checkbox">Move user's existing data to new organization</div>
+  <div id="update_row_orgs" class="checkbox">{{T "Move user's existing data to new organization"}}</div>
 </div>	
 <div>
-  <button id="set_org_button" type="button" class="btn btn-default">Change Organization</button>
+  <button id="set_org_button" type="button" class="btn btn-default">{{T "Change Organization"}}</button>
 </div>
 <br/><br/>
 
 <div>
-  <button id="crash" class="btn btn-danger" type="button">Crash!</button>
+  <button id="crash" class="btn btn-danger" type="button">{{T "Crash!"}}</button>
 </div>
 <br/><br/>
