--- a/app/templates/pages/ImagePage.hbs
+++ b/app/templates/pages/ImagePage.hbs
@@ -1,5 +1,5 @@
 <div id="message_bar" class="alert alert-info">
   <img src="img/ajax-loader.gif"/>
-  &nbsp;Loading image
+  &nbsp;{{T "Loading image"}}
 </div>
 <img id="image" style="width: 100%; display:none"/>
