--- a/app/templates/pages/PreviewImportSourcesPage.hbs
+++ b/app/templates/pages/PreviewImportSourcesPage.hbs
@@ -1,13 +1,13 @@
-<h4>Sources to Import</h4>
-<button id="import" class="btn btn-primary" type="button">Import Now</button>
+<h4>{{T "Sources to Import"}}</h4>
+<button id="import" class="btn btn-primary" type="button">{{T "Import Now"}}</button>
 <br>
 <hr>
 {{#each sources}}
-<div>Name: {{name}}</div>
-<div>Desc: {{desc}}</div>
-<div>Type: {{type}}</div>
-{{#if geo.coordinates}}<div>Latitude: {{last geo.coordinates}}</div>{{/if}}
-{{#if geo.coordinates}}<div>Longitude: {{first geo.coordinates}}</div>{{/if}}
+<div>{{T "Name"}}: {{name}}</div>
+<div>{{T "Desc"}}: {{desc}}</div>
+<div>{{T "Type"}}: {{type}}</div>
+{{#if geo.coordinates}}<div>{{T "Latitude"}}: {{last geo.coordinates}}</div>{{/if}}
+{{#if geo.coordinates}}<div>{{T "Longitude"}}: {{first geo.coordinates}}</div>{{/if}}
 {{#if custom}}
 	{{#eachProperty custom}}
 	    <div class="text-info">{{key}}: {{value}}</div>
