--- a/app/templates/pages/SourceEditPage.hbs
+++ b/app/templates/pages/SourceEditPage.hbs
@@ -3,11 +3,11 @@
     </div>
     <div>
         <button id="save_button" type="button" class="btn btn-primary margined">
-            Save
+            {{T "Save"}}
         </button>
         &nbsp;
         <button id="cancel_button" type="button" class="btn btn-default margined">
-            Cancel
+            {{T "Cancel"}}
         </button>
     </div>
 </div>
