--- a/app/templates/LocationView.hbs
+++ b/app/templates/LocationView.hbs
@@ -9,13 +9,13 @@
 </div>
 <div id="location_edit_controls" class="form" style="margin-top: 5px; display:none;">
 	<div class="form-group">
-		<label for="latitude">Latitude</label>
+		<label for="latitude">{{T "Latitude"}}</label>
 		<input type="number" class="form-control" id="latitude" step="any"/> 
 	</div>
 	<div class="form-group">
-		<label for="longitude">Longitude</label>
+		<label for="longitude">{{T "Longitude"}}</label>
 		<input type="number" class="form-control" id="longitude" step="any"/> 
 	</div>
-	<button id="save_button" type="button" class="btn btn-primary">Save</button>	
-	<button id="cancel_button" type="button" class="btn btn-default">Cancel</button>	
+	<button id="save_button" type="button" class="btn btn-primary">{{T "Save"}}</button>	
+	<button id="cancel_button" type="button" class="btn btn-default">{{T "Cancel"}}</button>	
 </div>
