--- a/app/templates/PageMenu.hbs
+++ b/app/templates/PageMenu.hbs
@@ -1,16 +1,16 @@
 <h3></h3>
 <ul>
-<li><a id="home"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-<li><a id="login"><span class="glyphicon glyphicon-user"></span> Login</a></li>
-<li><a id="source_list"><span class="glyphicon glyphicon-th-list"></span> List of Sources</a></li>
-<li><a id="source_map"><span class="glyphicon glyphicon-map-marker"></span> Map of Sources</a></li>
-<li><a id="new_test"><span class="glyphicon glyphicon-tint"></span> Start New Water Test</a></li>
-<li><a id="existing_test"><span class="glyphicon glyphicon-tint"></span> Recent Water Tests</a></li>
-<li><a id="new_survey"><span class="glyphicon glyphicon-list-alt"></span> Start New Survey</a></li>
-<li><a id="existing_survey"><span class="glyphicon glyphicon-check"></span> Recent Surveys</a></li>
-<li><a id="settings"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
-<li><a id="report_problem"><span class="glyphicon glyphicon-exclamation-sign"></span> Report a Problem</a></li>
-<li><a id="logout"><span class="glyphicon glyphicon-off"></span> Logout</a></li>
-<li><a id="import_sources"><span class="glyphicon glyphicon-none"></span> Import Sources</a></li>
-<li><a id="admin"><span class="glyphicon glyphicon-none"></span> Admin</a></li>
+<li><a id="home"><span class="glyphicon glyphicon-home"></span> {{T "Home"}}</a></li>
+<li><a id="login"><span class="glyphicon glyphicon-user"></span> {{T "Login"}}</a></li>
+<li><a id="source_list"><span class="glyphicon glyphicon-th-list"></span> {{T "List of Sources"}}</a></li>
+<li><a id="source_map"><span class="glyphicon glyphicon-map-marker"></span> {{T "Map of Sources"}}</a></li>
+<li><a id="new_test"><span class="glyphicon glyphicon-tint"></span> {{T "Start New Water Test"}}</a></li>
+<li><a id="existing_test"><span class="glyphicon glyphicon-tint"></span> {{T "Recent Water Tests"}}</a></li>
+<li><a id="new_survey"><span class="glyphicon glyphicon-list-alt"></span> {{T "Start New Survey"}}</a></li>
+<li><a id="existing_survey"><span class="glyphicon glyphicon-check"></span> {{T "Recent Surveys"}}</a></li>
+<li><a id="settings"><span class="glyphicon glyphicon-cog"></span> {{T "Settings"}}</a></li>
+<li><a id="report_problem"><span class="glyphicon glyphicon-exclamation-sign"></span> {{T "Report a Problem"}}</a></li>
+<li><a id="logout"><span class="glyphicon glyphicon-off"></span> {{T "Logout"}}</a></li>
+<li><a id="import_sources"><span class="glyphicon glyphicon-none"></span> {{T "Import Sources"}}</a></li>
+<li><a id="admin"><span class="glyphicon glyphicon-none"></span> {{T "Admin"}}</a></li>
 </ul>
