--- a/app/templates/pages/ExistingSurveyPage.hbs
+++ b/app/templates/pages/ExistingSurveyPage.hbs
@@ -7,10 +7,10 @@
 </style>
 
 <div>
-  <h4>Incomplete Surveys</h4>
+  <h4>{{T "Incomplete Surveys"}}</h4>
   <table class="table" id="incomplete_table">
   </table>
-  <h4>Recent Completed Surveys</h4>
+  <h4>{{T "Recent Completed Surveys"}}</h4>
   <table class="table" id="recent_table">
   </table>
 </div>
