--- a/app/templates/pages/NewTestPage.hbs
+++ b/app/templates/pages/NewTestPage.hbs
@@ -6,7 +6,7 @@
 }
 </style>
 
-<h4>Select type of test to start</h4>
+<h4>{{T "Select type of test to start"}}</h4>
 <table class="table">
   <tbody>
     {{#each forms}}
