--- a/app/templates/pages/SignupPage.hbs
+++ b/app/templates/pages/SignupPage.hbs
@@ -1,24 +1,24 @@
 <div class="page">
-  <h3>Signup with mWater</h3>
+  <h3>{{T "Signup with mWater"}}</h3>
   <form id="form_signup">
     <div class="form-group">
-        <label for="signup_username">Username</label>
-        <input class="form-control" id="signup_username" type="text" autocapitalize="off" autocorrect="off" spellcheck="false" placeholder="Username" />
-        <span class="help-block">Note: Your username is visible on water sources you create</span>
+        <label for="signup_username">{{T "Username"}}</label>
+        <input class="form-control" id="signup_username" type="text" autocapitalize="off" autocorrect="off" spellcheck="false" placeholder="{{T "Username"}}" />
+        <span class="help-block">{{T "Note: Your username is visible on water sources you create"}}</span>
     </div>
     <div class="form-group">
-        <label for="signup_password">Password</label>
-        <input class="form-control" id="signup_password" type="password" placeholder="Password" />
+        <label for="signup_password">{{T "Password"}}</label>
+        <input class="form-control" id="signup_password" type="password" placeholder="{{T "Password"}}" />
     </div>
     <br/>
     <div class="form-group">
-        <label for="signup_email">Email address</label>
-        <input class="form-control" id="signup_email" type="email" placeholder="Email">
-        <span class="help-block">Note: Your email address will never be shared</span>
+        <label for="signup_email">{{T "Email address"}}</label>
+        <input class="form-control" id="signup_email" type="email" placeholder="{{T "Email"}}">
+        <span class="help-block">{{T "Note: Your email address will never be shared"}}</span>
     </div>
     <div>
-        <button id="signup_button" type="submit" class="btn btn-primary btn-lg">Signup</button>
-        <button id="cancel_button" type="submit" class="btn btn-default btn-lg">Cancel</button>
+        <button id="signup_button" type="submit" class="btn btn-primary btn-lg">{{T "Signup"}}</button>
+        <button id="cancel_button" type="submit" class="btn btn-default btn-lg">{{T "Cancel"}}</button>
     </div>
  </form>
 </div>
