--- a/app/templates/pages/SourceListPage.hbs
+++ b/app/templates/pages/SourceListPage.hbs
@@ -1,10 +1,10 @@
 <div>
   <div id="location_msg" class="alert alert-info">
-    Waiting for GPS location...
+    {{T "Waiting for GPS location..."}}
   </div>
   <div id="search_bar" class="alert alert-info">
     <button type="button" class="close" id="search_cancel">&times;</button>
-    Search results for: <span id="search_text" style="font-weight:bold"></span>
+    {{T "Search results for:"}} <span id="search_text" style="font-weight:bold"></span>
   </div>
   <table class="table" id="table">
   </table>
