--- a/app/templates/pages/SourceListPage_items.hbs
+++ b/app/templates/pages/SourceListPage_items.hbs
@@ -2,7 +2,7 @@
 	{{#each sources}}
 	<tr class="tappable" id="{{_id}}">
 	    <td><strong>{{name}}</strong> 
-	    <td>{{#if geo}}{{else}}<span class="text-error"><b>Unlocated</b></span>{{/if}}</td>
+	    <td>{{#if geo}}{{else}}<span class="text-error"><b>{{T "Unlocated"}}</b></span>{{/if}}</td>
 	    <br/>
 	    <span class="text-muted">{{desc}}&nbsp;</span></td>
 	    <td><strong>{{code}}</strong></td>
@@ -10,7 +10,7 @@
 	</tr>
 	{{else}}
 	<tr>
-	    <td> See the map for a global view if no sources are found. </td>
+	    <td> {{T "See the map for a global view if no sources are found."}} </td>
 	</tr>
 	{{/each}}
 </tbody>
