Final Spanish localization

--- a/app/templates/LocationView.hbs
+++ b/app/templates/LocationView.hbs
@@ -1,8 +1,8 @@
 <div>
-	<button id="location_set" class="btn btn-default"><span class="glyphicon glyphicon-screenshot"></span> Set</button>
-	<button id="location_clear" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> Clear</button>
-	<button id="location_map" class="btn btn-default"><span class="glyphicon glyphicon-map-marker"></span> Map</button>
-	<button id="location_edit" class="btn btn-default"><span class="glyphicon glyphicon-edit"></span> Edit</button>
+	<button id="location_set" class="btn btn-default"><span class="glyphicon glyphicon-screenshot"></span> {{T "Set"}}</button>
+	<button id="location_clear" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> {{T "Clear"}}</button>
+	<button id="location_map" class="btn btn-default"><span class="glyphicon glyphicon-map-marker"></span> {{T "Map"}}</button>
+	<button id="location_edit" class="btn btn-default"><span class="glyphicon glyphicon-edit"></span> {{T "Edit"}}</button>
 	<span class="buttoned">
 		<span id="location_absolute"> </span> (<span id="location_relative"></span>)
 	</span>
