--- a/app/css/AppView.css
+++ b/app/css/AppView.css
@@ -1,3 +1,11 @@
 #appview_content { 
   margin-top: 50px;
 }
+
+.leaflet-popup-content-wrapper .thumb,
+.leaflet-popup-content-wrapper .data
+ {
+	width: 100%;
+	margin-bottom: 10px;
+	border-radius: 3px;
+}
