--- a/app/css/AppView.css
+++ b/app/css/AppView.css
@@ -9,3 +9,11 @@
 	margin-bottom: 10px;
 	border-radius: 3px;
 }
+table tr.source td {
+	vertical-align: middle;
+}
+.source td .thumb {
+	height: 60px;
+	margin-right: 10px;
+	border-radius: 3px;
+}
