moved thumbnail styles

--- a/app/js/pages/SourceListPage_items.hbs
+++ b/app/js/pages/SourceListPage_items.hbs
@@ -17,3 +17,14 @@
 	</tr>
 	{{/each}}
 </tbody> 
+
+<style>
+table tr.source td {
+	vertical-align: middle;
+}
+.source td .thumb {
+	height: 60px;
+	margin-right: 10px;
+	border-radius: 3px;
+}
+</style>
