--- a/app/js/pages/SourceMapPage.hbs
+++ b/app/js/pages/SourceMapPage.hbs
@@ -2,6 +2,15 @@
   html, body { height: 100%; overflow: hidden; }
   .page { padding: 0px;}
   #map { width: 100%;}
+
+  .leaflet-popup-content-wrapper .thumb,
+  .leaflet-popup-content-wrapper .data {
+    width: 100%;
+    margin-bottom: 10px;
+    border-radius: 3px;
+  }
 </style>
 
 <div id="map"></div>
+
+
