--- a/app/js/pages/SurveyPage.hbs
+++ b/app/js/pages/SurveyPage.hbs
@@ -18,12 +18,12 @@
 	{{#if response.code}}
 	<span class="responsecode">{{response.code}}</span>
 	{{/if}}
-	<span class="text-muted"><b> of </b></span><b>{{form.name}}</b>
+	<span class="text-muted"><b> of </b></span><b>{{name}}</b>
 </div>
 
 <div id="contents"></div>
 
-{{#if response.completed}}
+{{#if canRedraft}}
 <br/>
 <div><button id="edit_button" type="button" class="btn btn-default margined"><span class="glyphicon glyphicon-edit"></span> {{T "Edit Survey"}}</button></div>
 {{/if}}
