Fixed rejected responses

--- a/app/js/pages/ExistingSurveyPage_items.hbs
+++ b/app/js/pages/ExistingSurveyPage_items.hbs
@@ -17,9 +17,11 @@
 			{{/is}}
 			<br/>
 			<span class="text-muted">{{code}}</span>
-			{{#if rejectionMessage}}
-			<br/><span class="text-danger">{{rejectionMessage}}</span>
-			{{/if}}
+			{{#is status "rejected"}}
+				{{#if rejectionMessage}}
+				<br/><span class="text-danger">{{rejectionMessage}}</span>
+				{{/if}}
+			{{/is}}
 		</td>
 		<td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
 	</tr>
