Made new test and survey workflow

--- a/app/js/pages/MainPage.hbs
+++ b/app/js/pages/MainPage.hbs
@@ -34,11 +34,11 @@ td {
 		{{T "List Water Sources"}}</td>
 	</tr>
 	<tr>
-		<td id="new_test" align="center" class="tappable"><img id="tests" class="main_icon tappable" src="img/test_icon.png"/>
+		<td id="test_list" align="center" class="tappable"><img id="tests" class="main_icon tappable" src="img/test_icon.png"/>
 		<br/>
-		{{T "Start Water Test"}}</td>
-		<td id="new_survey" align="center" class="tappable"><img id="settings" class="main_icon tappable" src="img/survey_icon.png"/>
+		{{T "Water Tests"}}</td>
+		<td id="survey_list" align="center" class="tappable"><img id="settings" class="main_icon tappable" src="img/survey_icon.png"/>
 		<br/>
-		{{T "Start Survey"}}</td>
+		{{T "Surveys"}}</td>
 	</tr>
 </table>
