--- a/app/js/pages/TestListPage.hbs
+++ b/app/js/pages/TestListPage.hbs
@@ -1,4 +1,9 @@
 <div>
+  <button type="button" id="add_test" class="btn btn-primary btn-block">
+    <span class="glyphicon glyphicon-plus"></span>
+    {{T "Start Water Test"}}
+  </button>
+
   <h4>{{T "Incomplete Tests"}}</h4>
   <table class="table" id="incomplete_table">
   </table>
