--- a/app/js/pages/SourceListPage_items.hbs
+++ b/app/js/pages/SourceListPage_items.hbs
@@ -4,11 +4,11 @@
 	    <td>
 	    	{{#if thumbnail}}<img class='thumb' src='https://api.mwater.co/v3/images/{{thumbnail}}?h=100' >{{/if}}
 	    	<strong>{{name}}</strong> 
-	    	<td>{{#if geo}}{{else}}<span class="text-error"><b>{{T "Unlocated"}}</b></span>{{/if}}</td>
 	    	<br/>
+	    	<span class="text-muted"><em>{{typeName}}</em>&nbsp;</span>
 	    	<span class="text-muted">{{desc}}&nbsp;</span>
 	    </td>
-    	<td><strong>{{code}}</strong></td>
+    	<td>{{#unless geo}}<span class="label label-warning"><b>{{T "Unlocated"}}</b></span>{{/unless}} <strong>{{code}}</strong></td>
 	    <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
 	</tr>
 	{{else}}
