Fixed image uploading

--- a/app/js/images/ImageUploader.hbs
+++ b/app/js/images/ImageUploader.hbs
@@ -9,8 +9,9 @@
         <form id="uploadForm" enctype="multipart/form-data" method="post">
           <input type="file" name="fileToUpload" id="fileToUpload"/>
           <div class="progress progress-striped active">
-            <div class="bar" style="width: 0%;"></div>
-          </div>
+            <div class="progress-bar" style="width: 0%">
+            </div>
+          </div>          
         </form>
         <button id="cancel" class="btn btn-default" disabled="disabled">{{T "Cancel"}}</button>
       </div>
