--- a/app/js/pages/MainPage.hbs
+++ b/app/js/pages/MainPage.hbs
@@ -2,6 +2,7 @@
 <small>{{T "User:"}}
 <b>{{#if login}}{{login.user}}{{else}}{{T "Not logged in"}}{{/if}}</b>
 {{T "Sync:"}} {{#if lastSyncDate}}<b>{{timeago lastSyncDate}}</b>{{/if}}
+<span id="upserts_pending"></span>
 <span id="images_pending"></span>
 {{T "Version:"}} <b>{{version}} {{#if baseVersion}}({{baseVersion}}){{/if}}</b>
 </small>
