Basic sensor connection

--- a/app/js/PageMenu.hbs
+++ b/app/js/PageMenu.hbs
@@ -10,4 +10,5 @@
 <li><a id="report_problem"><span class="glyphicon glyphicon-exclamation-sign"></span> {{T "Report a Problem"}}</a></li>
 <li><a id="logout"><span class="glyphicon glyphicon-off"></span> {{T "Logout"}}</a></li>
 <li><a id="admin"><span class="glyphicon glyphicon-none"></span> {{T "Admin"}}</a></li>
+<li><a id="sensor_list"><span class="glyphicon glyphicon-stats"></span> {{T "Sensors"}}</a></li>
 </ul>
