Error: Immediately says that no active connection

--- a/app/js/pages/SensorPage.hbs
+++ b/app/js/pages/SensorPage.hbs
@@ -4,6 +4,8 @@
 
 <br/>
 
+<button id="update_status" type="button" class="btn btn-default">Update Device Status</button>
+
 {{#with stats}}
 	<div>Battery voltage: {{batteryVoltage}}</div>
 	<div>UID: {{uid}}</div>
