Added upgrade firmware

--- a/app/js/pages/SensorPage.hbs
+++ b/app/js/pages/SensorPage.hbs
@@ -14,4 +14,8 @@
 	<div>Sample Rate: {{sampleRate}}</div>
 	<div>Records: {{totalRecords}} {{lowestRecord}}-{{highestRecord}}</div>
 {{/with}}
+
+
+<button id="upgrade_firmware" type="button" class="btn btn-warning">Upgrade Firmware</button>
+
 {{/if}}
