--- a/app/js/pages/SensorPage.hbs
+++ b/app/js/pages/SensorPage.hbs
@@ -15,7 +15,9 @@
 	<div>Records: {{totalRecords}} {{lowestRecord}}-{{highestRecord}}</div>
 {{/with}}
 
-
 <button id="upgrade_firmware" type="button" class="btn btn-warning">Upgrade Firmware</button>
 
 {{/if}}
+
+<div id="events">
+</div>
