--- a/app/js/pages/SensorPage.hbs
+++ b/app/js/pages/SensorPage.hbs
@@ -10,7 +10,9 @@
 {{#with stats}}
 	<div>Battery voltage: {{batteryVoltage}}</div>
 	<div>UID: {{uid}}</div>
-	<div>Status: {{#if recording}}Recording{{else}}Not Recording{{/if}}</div>
+	<div>Ant+ Channel: {{channel}}</div>
+	<div>Firmware version: {{version}}</div>
+	<div>Status: {{#if recording}}Logging Enabled{{else}}Logging Disabled{{/if}}</div>
 	<div>Sample Rate: {{sampleRate}}</div>
 	<div>Records: {{totalRecords}} {{lowestRecord}}-{{highestRecord}}</div>
 {{/with}}
