Added device uid

--- a/app/js/pages/SensorPage.hbs
+++ b/app/js/pages/SensorPage.hbs
@@ -9,7 +9,7 @@
 
 {{#with stats}}
 	<div>Battery voltage: {{batteryVoltage}}</div>
-	<div>UID: {{uid}}</div>
+	<div>Device UID: {{deviceUid}}</div>
 	<div>Ant+ Channel: {{channel}}</div>
 	<div>Firmware version: {{version}}</div>
 	<div>Status: {{#if recording}}Logging Enabled{{else}}Logging Disabled{{/if}}</div>
